--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,20 @@ section#items .giveaway-item .item-link .item-hover .item-hover-content {
     color: #07162f;
   }
 
+  .footer {    
+    background-color: #07162f;  
+    color: #fff;  
+    height: 60px;
+    line-height: 60px; 
+    width: 100%;
+  }
+
   .btn-primary {
       background-color: rgb(238, 95, 222);
       border-color: rgb(238, 95, 222);
   }
 
   .btn-primary:hover {
-    background-color: rgb(127, 51, 119);      
+    background-color: rgb(227, 94, 213);      
     border-color: rgb(127, 51, 119);
   }
